--- a/.gitignore
+++ b/.gitignore
@@ -392,4 +392,5 @@ cache
 /.idea/inspectionProfiles/profiles_settings.xml
 /commands/games/TicTacToe/TTT_Docs
 /commands/games/TicTacToe/TTT_RoadMap
+/.idea/vcs.xml
 logs
